# tess-locator

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  mkdocs.yml  pyproject.toml  setup.py  shim-setup.py
.github/workflows/: black.yml  flake8.yml  mypy.yml  tests.yml
docs/: api.md  index.md  installation.md  tutorial.ipynb
src/tess_locator/: __init__.py  catalog.py  dates.py  ffi_catalog.py  healpix.py  imagelist.py  locate.py  tesscoord.py  time.py  update.py  wcs_catalog.py  wcsdb.py
src/tess_locator/data/: tess-s0001-ffi-catalog.parquet  tess-s0001-wcs-catalog.parquet  tess-s0002-ffi-catalog.parquet  tess-s0002-wcs-catalog.parquet  tess-s0003-ffi-catalog.parquet  tess-s0003-wcs-catalog.parquet  tess-s0004-ffi-catalog.parquet  tess-s0004-wcs-catalog.parquet  tess-s0005-ffi-catalog.parquet  tess-s0005-wcs-catalog.parquet  tess-s0006-ffi-catalog.parquet  tess-s0006-wcs-catalog.parquet  tess-s0007-ffi-catalog.parquet  tess-s0007-wcs-catalog.parquet  tess-s0008-ffi-catalog.parquet  tess-s0008-wcs-catalog.parquet  tess-s0009-ffi-catalog.parquet  tess-s0009-wcs-catalog.parquet  tess-s0010-ffi-catalog.parquet  tess-s0010-wcs-catalog.parquet  tess-s0011-ffi-catalog.parquet  tess-s0011-wcs-catalog.parquet  tess-s0012-ffi-catalog.parquet  tess-s0012-wcs-catalog.parquet  tess-s0013-ffi-catalog.parquet  tess-s0013-wcs-catalog.parquet  tess-s0014-ffi-catalog.parquet  tess-s0014-wcs-catalog.parquet  tess-s0015-ffi-catalog.parquet  tess-s0015-wcs-catalog.parquet  tess-s0016-ffi-catalog.parquet  tess-s0016-wcs-catalog.parquet  tess-s0017-ffi-catalog.parquet  tess-s0017-wcs-catalog.parquet  tess-s0018-ffi-catalog.parquet  tess-s0018-wcs-catalog.parquet  tess-s0019-ffi-catalog.parquet  tess-s0019-wcs-catalog.parquet  tess-s0020-ffi-catalog.parquet  tess-s0020-wcs-catalog.parquet  (+19 more)
tests/: test_ffi_catalog.py  test_locate.py  test_tess_locator.py  test_tesscoord.py  test_time_to_sector.py  test_wcs_catalog.py
