[tool.poetry]
name = "tess-locator"
version = "0.4.0"
description = "Fast offline queries of TESS FFI positions and filenames."
license = "MIT"
authors = ["Geert Barentsen <hello@geert.io>",
           "Christina Hedges",
           "Jessie Dotson"]
readme = "README.rst"
homepage = "https://github.com/SSDataLab/tess-locator"
repository = "https://github.com/SSDataLab/tess-locator"
keywords = ["NASA, TESS, Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = "^3.7"
astropy = ">= 4.0"
pandas = ">= 1.0"
numpy = ">= 1.19"
tqdm = ">= 4.51"
attrs = ">= 20.3.0"
tess-point = ">= 0.6.1"
tess-cloud = ">=0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
astroquery = "^0.4.1"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
mypy = "^0.790"
line-profiler = "^3.1.0"
jupyterlab = "^2.2.9"
pytest-xdist = "^2.1.0"
pre-commit = "^2.8.2"
#tess-cloud = {path = "../tess-cloud", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
